tests/uncompilable_examples/bad_get_variant_type.stderr
error[E0277]: the trait bound `Enum: variant_access_traits::GetVariant<&i32, _>` is not satisfied
  --> tests/uncompilable_examples/bad_get_variant_type.rs:12:56
   |
12 |     let _: Result<&i32, VariantAccessError> = instance.get_variant();
   |                                                        ^^^^^^^^^^^ the trait `variant_access_traits::GetVariant<&i32, _>` is not implemented for `Enum`
   |
   = help: the following implementations were found:
             <Enum as variant_access_traits::GetVariant<bool, F2>>
             <Enum as variant_access_traits::GetVariant<i64, F1>>
